--- a/app/src/main/res/layout/activity_list_beacons_rastreator.xml
+++ b/app/src/main/res/layout/activity_list_beacons_rastreator.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_list_groups"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ListBeaconsRastreatorActivity">
+    tools:context=".ui.Activities.ListBeaconsRastreatorActivity">
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
