--- a/app/src/main/res/layout/activity_group_settings.xml
+++ b/app/src/main/res/layout/activity_group_settings.xml
@@ -6,26 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.Activities.GroupSettingsActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <EditText
             android:id="@+id/groupName"
             android:hint="Group name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/groupPhoto"
-            android:hint="Group Photo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SAVE" />
+            android:text="SAVE"
+            android:enabled="true" />
 
 
     </LinearLayout>
